--- a/index.html
+++ b/index.html
@@ -18,5 +18,21 @@
         </ul>
       </div>
     </div>
+    <div class="top">
+      <div class="left">
+        <h1>This website is awesome</h1>
+        <div class="text">
+          This website has some subtext that goes here under the main title.
+          It's smaller font and the color is lower contrast
+        </div>
+        <button type="button">Sign up</button>
+      </div>
+      <img
+        src="./images/coffee-beans.jpg"
+        alt="close up of roasted espresso beans"
+        width="400"
+        height="200"
+      />
+    </div>
   </body>
 </html>
