Add main content, revise top div
This commit adds the main content with placeholders for images. Also
rearranges the dives in the top bar so that the background colors are
easier to manage between sections of the website.

--- a/index.html
+++ b/index.html
@@ -8,31 +8,62 @@
   </head>
 
   <body>
-    <div class="header">
-      <div class="logo">Header Logo</div>
-      <div class="links">
-        <ul>
-          <li><a href="#">header link one</a></li>
-          <li><a href="#">header link two</a></li>
-          <li><a href="#">header link three</a></li>
-        </ul>
+    <div class="top">
+      <div class="header">
+        <div class="logo">Header Logo</div>
+        <div class="links">
+          <ul>
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link two</a></li>
+            <li><a href="#">header link three</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="container">
+        <div class="left">
+          <h1>This website is awesome</h1>
+          <div class="text">
+            This website has some subtext that goes here under the main title.
+            It's smaller font and the color is lower contrast
+          </div>
+          <button type="button">Sign up</button>
+        </div>
+        <img
+          src="./images/coffee-beans.jpg"
+          alt="close up of roasted espresso beans"
+          width="400"
+          height="200"
+        />
       </div>
     </div>
-    <div class="top">
-      <div class="left">
-        <h1>This website is awesome</h1>
-        <div class="text">
-          This website has some subtext that goes here under the main title.
-          It's smaller font and the color is lower contrast
+    <div class="main">
+      <h2>Some random information.</h2>
+      <div class="container">
+        <div class="info">
+          <img src="" alt="" width="100" height="100" />
+          <div class="caption">
+            this is some subtext under an illustration or image
+          </div>
         </div>
-        <button type="button">Sign up</button>
+        <div class="info">
+          <img src="" alt="" width="100" height="100" />
+          <div class="caption">
+            this is some subtext under an illustration or image
+          </div>
+        </div>
+        <div class="info">
+          <img src="" alt="" width="100" height="100" />
+          <div class="caption">
+            this is some subtext under an illustration or image
+          </div>
+        </div>
+        <div class="info">
+          <img src="" alt="" width="100" height="100" />
+          <div class="caption">
+            this is some subtext under an illustration or image
+          </div>
+        </div>
       </div>
-      <img
-        src="./images/coffee-beans.jpg"
-        alt="close up of roasted espresso beans"
-        width="400"
-        height="200"
-      />
     </div>
   </body>
 </html>
