Add quote block

--- a/index.html
+++ b/index.html
@@ -65,5 +65,13 @@
         </div>
       </div>
     </div>
+    <div class="quote">
+      <div class="text">
+        This is an insiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+        <div class="attribution">
+          -Thor, God of Thunder
+        </div>
+      </div>
+    </div>
   </body>
 </html>
