Add footer and call to action bar

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             This website has some subtext that goes here under the main title.
             It's smaller font and the color is lower contrast
           </div>
-          <button type="button">Sign up</button>
+          <button>Sign up</button>
         </div>
         <img
           src="./images/coffee-beans.jpg"
@@ -72,6 +72,20 @@
           -Thor, God of Thunder
         </div>
       </div>
+    </div>
+    <div class="bar">
+      <div class="container">
+        <div class="title">
+          Call to action! It's time!
+        </div>
+        <div class="text">
+          Sign up for our product by clicking that button right over there!
+        </div>
+      </div>
+      <button>Sign up</button>
+    </div>
+    <div class="footer">
+      Copyright &copy The Odin Project 2021
     </div>
   </body>
 </html>
