Add images to main content

--- a/index.html
+++ b/index.html
@@ -40,25 +40,25 @@
       <h2>Some random information.</h2>
       <div class="container">
         <div class="info">
-          <img src="" alt="" width="100" height="100" />
+          <img src="./images/glass-latte.jpg" alt="latte in a clear glass with thick head of foam" width="100" height="100" />
           <div class="caption">
             this is some subtext under an illustration or image
           </div>
         </div>
         <div class="info">
-          <img src="" alt="" width="100" height="100" />
+          <img src="./images/latte-leaf.jpg" alt="latte in a white mug with the milk foam forming a lead shape" width="100" height="100" />
           <div class="caption">
             this is some subtext under an illustration or image
           </div>
         </div>
         <div class="info">
-          <img src="" alt="" width="100" height="100" />
+          <img src="./images/latte-pour.jpg" alt="latte being poured into a white mug by a barista" width="100" height="100" />
           <div class="caption">
             this is some subtext under an illustration or image
           </div>
         </div>
         <div class="info">
-          <img src="" alt="" width="100" height="100" />
+          <img src="./images/swan-latte.jpg" alt="latte in a white mug with the milk foam in the shape of a swan" width="100" height="100" />
           <div class="caption">
             this is some subtext under an illustration or image
           </div>
